fixed navigation overflow with display:table hack

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -7,55 +7,36 @@ header {
   top: 0px;
   right: 0;
   left: 0;
-  /*font-weight: 400;*/
   z-index: 10;
-  /*color: #3c3c3a; */
   font-family: $sans-serif;
-  line-height: 67px;
+  /*line-height: 67px;*/
+
 }
 
-.space-for-logo {
-  padding-left: 200px;
+a#logo {
+  font-weight: bold;
 }
 
-@media only screen and (min-width: 1024px) {
-  header a#logo {
-    width: 180px;
-    height: 70px;
-    margin-left: -13%;
-    margin-top: -0.3%;
-    display:inline-block;
-    background: url("logo8.png") no-repeat center center;
-    z-index: 1000;
-    text-indent: -9999px;
-    transition: all 0.2s ease-in-out 0s;
-    border-bottom: 0px;
-  }
-}
-
-header a#logo:hover {
+a#logo:hover {
   opacity: 0.7;
   -webkit-transition: all .2s ease-in-out;
   -moz-transition: all .2s ease-in-out;
   -o-transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out 0s;
 }
 
-
-#logo {
-	width: 70%;
-	position: absolute;
-	top: 5%;
-	left:15%;
-}
-
-#logo img {
-	width: 100%;
-	height: 100%;
-}
-
-.header-link {
-  font-weight: bold;
+@media only screen and (min-width: 768px) {
+  #logo {
+    background: url("logo8.png") no-repeat;
+    width: 180px;
+    height: 70px;
+    position: absolute;
+    text-indent: -200px;
+    overflow:hidden;
+    /* required to overwrite .valign-middle-cell */
+    top: -1px;
   }
+}
 
 .top-header {
   background-color: #fff;
@@ -64,4 +45,24 @@ header a#logo:hover {
   -moz-box-shadow:inset 0px 1px 11px #999099;
   -webkit-box-shadow:inset 0px 1px 11px #999099;
   box-shadow:inset 0px 1px 11px #999099;
+
+  .row {
+    height: 100%;
+  }
+}
+
+.valign-middle-container {
+  display: table;
+  height: 100%;
+}
+
+.valign-middle-container > .valign-middle-row {
+  display: table-row;
+  height: 100%;
+}
+
+.valign-middle-container > .valign-middle-row > .valign-middle-cell {
+  display: table-cell;
+  vertical-align: middle;
+  height: 100%;
 }
